--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,54 @@
 body {
-    background-color: aqua;
+    background-color: #fff;
+    font-family: 'Abril Fatface', cursive, serif;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: -webkit-sticky;
+    /* Safari */
+    position: sticky;
+    top: 0;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 12px 16px 12px 16px;
+    text-decoration: none;
+    font-size: 22px;
+    font-family: 'Newsreader', serif;
+}
+
+li a:hover {
+    border-bottom: 3px solid rgb(245, 3, 3);
+}
+
+.selected {
+    background-color: rgb(250, 199, 192);
+}
+
+#heading1Name {
+    font-size: 7vw;
+    color: rgb(29, 73, 155);
+    text-align: center;
+}
+
+#heading2Name {
+    font-size: 6.5vw;
+    color: rgb(29, 73, 155);
+    text-align: center;
+}
+
+#heading3Name {
+    font-size: 6.5vw;
+    color: rgb(245, 3, 3);
 }
