--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fff;
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
     font-family: 'Abril Fatface', cursive, serif;
 }
 
@@ -12,6 +13,7 @@ ul {
     /* Safari */
     position: sticky;
     top: 0;
+    background-color: #fff;
 }
 
 li {
@@ -24,7 +26,7 @@ li a {
     text-align: center;
     padding: 12px 16px 12px 16px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 21px;
     font-family: 'Newsreader', serif;
 }
 
@@ -37,18 +39,44 @@ li a:hover {
 }
 
 #heading1Name {
-    font-size: 7vw;
+    font-size: 8vw;
     color: rgb(29, 73, 155);
     text-align: center;
+    background: -webkit-linear-gradient(rgb(163, 169, 201), rgb(245, 3, 3));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #heading2Name {
-    font-size: 6.5vw;
+    font-size: 7.5vw;
     color: rgb(29, 73, 155);
     text-align: center;
+    background: -webkit-linear-gradient(rgb(175, 183, 221), rgb(245, 3, 3));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #heading3Name {
-    font-size: 6.5vw;
+    font-size: 7.5vw;
     color: rgb(245, 3, 3);
+    text-align: center;
+    background: -webkit-linear-gradient(#eee, #333);
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(41, 82, 158));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#heading4Name {
+    font-size: 2.05vw;
+    color: rgb(41, 82, 158);
+    /* background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+}
+
+.textonscreen {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
