--- a/projects.css
+++ b/projects.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fff;
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
     font-family: 'Abril Fatface', cursive, serif;
 }
 
@@ -12,6 +13,7 @@ ul {
     /* Safari */
     position: sticky;
     top: 0;
+    background-color: #fff;
 }
 
 li {
@@ -24,7 +26,7 @@ li a {
     text-align: center;
     padding: 12px 16px 12px 16px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 21px;
     font-family: 'Newsreader', serif;
 }
 
