--- a/resume.css
+++ b/resume.css
@@ -1,46 +1,10 @@
 body {
     background-color: #fff;
-    margin: 12px;
+    margin: 8px;
     font-family: 'Newsreader', serif;
     font-size: 18px;
     text-align: center;
-}
-
-ul.navtab {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    position: -webkit-sticky;
-    /* Safari */
-    position: sticky;
-    top: 0;
-}
-
-li.navtab {
-    float: right;
-}
-
-li.navtab a.selected {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 12px 16px 12px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: 'Newsreader', serif;
-}
-
-li.navtab a:hover {
-    border-bottom: 3px solid rgb(245, 3, 3);
-}
-
-a.selected {
-    border-top: hidden;
-}
-
-#thisnav {
-    background-color: rgb(250, 199, 192);
+    background-image: linear-gradient(to right, #fff, #f6f9fc);
 }
 
 .heading {
@@ -184,4 +148,42 @@ ul li {
     img.info {
         display: none;
     }
+}
+
+ul.navtab {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: -webkit-sticky;
+    /* Safari */
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+}
+
+li.navtab {
+    float: right;
+}
+
+li.navtab a.selected {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 12px 16px 12px 16px;
+    text-decoration: none;
+    font-size: 21px;
+    font-family: 'Newsreader', serif;
+}
+
+li.navtab a:hover {
+    border-bottom: 3px solid rgb(245, 3, 3);
+}
+
+a.selected {
+    border-top: hidden;
+}
+
+#thisnav {
+    background-color: rgb(250, 199, 192);
 }
