commit on 'main'

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fff;
-    background-image: linear-gradient(to right, #fff, #f0f6fc);
+    background-image: linear-gradient(to right, rgb(63, 119, 172), #c0361e5d);
     font-family: 'Abril Fatface', cursive, serif;
 }
 
@@ -51,7 +51,7 @@ li a:hover {
     font-size: 7.5vw;
     color: rgb(29, 73, 155);
     text-align: center;
-    background: -webkit-linear-gradient(rgb(175, 183, 221), rgb(245, 3, 3));
+    background: -webkit-linear-gradient(rgb(163, 169, 201), rgb(245, 3, 3));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -61,17 +61,21 @@ li a:hover {
     color: rgb(245, 3, 3);
     text-align: center;
     background: -webkit-linear-gradient(#eee, #333);
-    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(41, 82, 158));
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
+    background: -webkit-linear-gradient( rgb(63, 119, 172), #c0361e5d);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 #heading4Name {
     font-size: 2.05vw;
-    color: rgb(41, 82, 158);
-    /* background: -webkit-linear-gradient(#eee, #333);
+    padding-top: 3vw;
+    font-size: 3vw;
+    background: -webkit-linear-gradient( rgb(63, 119, 172), #c0361e5d);
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
+    -webkit-text-fill-color: transparent;
+    text-align: center;
 }
 
 .textonscreen {
@@ -79,4 +83,50 @@ li a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 4vw 6vw 6vw 6vw;
+    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
+}
+
+.leftonscreen {
+    position: absolute;
+    top: 50%;
+    left: 12%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 8vw 6vw 8vw 6vw;
+    box-shadow: 0 8px 16px 0 rgb(19, 83, 180);
+    writing-mode: vertical-lr;
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+}
+
+.rightonscreen {
+    position: absolute;
+    top: 50%;
+    left: 88%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 8vw 6vw 8vw 6vw;
+    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
+    writing-mode: vertical-lr;
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a {
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+}
+
+a:hover {
+    font-size: 4vw;
 }
