commit on 'main'

--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,10 @@
 body {
     background-color: #fff;
     background-image: linear-gradient(to right, #fff, #f0f6fc);
-    font-family: 'Abril Fatface', cursive, serif;
+    font-family: 'Newsreader', serif;
+    text-align: center;
+    background-image: linear-gradient(to right, rgb(63, 119, 172), #c0361e5d);
+    font-size: 40px;
 }
 
 ul {
