--- a/portfolio.css
+++ b/portfolio.css
@@ -1,16 +1,30 @@
+/* Global
+-----------------------------------------*/
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #fff;
     background-image: linear-gradient(to right, rgb(63, 119, 172), #c0361e5d);
     font-family: 'Abril Fatface', cursive, serif;
+    margin: 0;
 }
 
-ul {
+.onePage {
+    width: 100%;
+    height: 100%;
+    height: 100vh;
+}
+
+
+/* ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     position: -webkit-sticky;
-    /* Safari */
     position: sticky;
     top: 0;
     background-color: #fff;
@@ -36,7 +50,7 @@ li a:hover {
 
 .selected {
     background-color: rgb(250, 199, 192);
-}
+} */
 
 #heading1Name {
     font-size: 8vw;
@@ -46,6 +60,7 @@ li a:hover {
     background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin-top: 0;
 }
 
 #heading2Name {
@@ -68,8 +83,8 @@ li a:hover {
 
 #heading4Name {
     font-size: 2.05vw;
-    padding-top: 1vw;
-    font-size: 3vw;
+    padding-top: 0.8vw;
+    font-size: 2.8vw;
     background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -84,8 +99,13 @@ li a:hover {
     background-color: #fff;
     padding: 4vw 6vw 6vw 6vw;
     box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
+    box-shadow: 0 8px 16px 0 rgb(151, 66, 66);
     background-image: linear-gradient(to right, #fff, #f0f6fc);
 }
+
+
+/* Sidebars and Links
+-----------------------------------------*/
 
 .leftonscreen {
     position: absolute;
@@ -94,7 +114,7 @@ li a:hover {
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 8vw 6vw 8vw 6vw;
-    box-shadow: 0 8px 16px 0 rgb(19, 83, 180);
+    box-shadow: 0 8px 16px 0 rgba(19, 83, 180, 0.521);
     writing-mode: vertical-lr;
     font-size: 3vw;
     color: rgb(63, 119, 172);
@@ -109,7 +129,7 @@ li a:hover {
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 8vw 6vw 8vw 6vw;
-    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
+    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.521);
     writing-mode: vertical-lr;
     font-size: 3vw;
     color: rgb(63, 119, 172);
@@ -137,11 +157,11 @@ a.sidebars:hover {
 }
 
 #linkedin:hover {
-    font-size: 1.3vw;
+    color: rgb(63, 119, 172);
 }
 
 #github:hover {
-    font-size: 1.3vw;
+    color: rgb(63, 119, 172);
 }
 
 #linkedin {
@@ -151,4 +171,483 @@ a.sidebars:hover {
 #github {
     color: rgba(0, 0, 0, 0.87);
     padding-left: 2%;
+}
+
+
+/* Projects /main
+-----------------------------------------*/
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.content-wrap {
+    max-width: 1200px;
+    width: 85%;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+h3 {
+    margin-bottom: 0;
+}
+
+.divider>section {
+    border-bottom: 1px groove #566246ff;
+    border-bottom: 2px solid #c0361e;
+    padding: 25px 0;
+}
+
+.divider>section:last-of-type {
+    border-bottom: none;
+}
+
+img {
+    width: 350px;
+    height: 250px;
+    padding: 7px;
+    border: 1px solid rgb(63, 119, 172);
+    border-radius: 10px;
+}
+
+.project-item a {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.project-item a:hover {
+    text-decoration: none;
+}
+
+h2 {
+    font-family: 'Lora', serif;
+    font-size: 35px;
+    font-weight: 400;
+    margin: 0;
+}
+
+h3 {
+    font-family: 'Lora', serif;
+    font-size: 25px;
+    font-weight: 400;
+    margin: 0;
+}
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.lang-used {
+    color: aliceblue;
+    text-decoration: none;
+    background-color: rgb(61, 115, 216);
+    background-color: rgb(63, 119, 172);
+    padding: 4px 9px;
+    border-radius: 4px;
+    display: inline-block;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    margin-left: 5px;
+}
+
+.lang-internal {
+    color: aliceblue;
+    text-decoration: none;
+    color: rgb(63, 119, 172);
+    border-radius: 4px;
+    padding: 2px;
+    display: inline-block;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    margin-left: 20px;
+}
+
+.lang-internal:first-of-type {
+    margin-left: 0;
+}
+
+.lang-used:first-of-type {
+    margin-left: 0;
+}
+
+
+/* Projects
+-----------------------------------------*/
+
+.projects {
+    background-color: #d8dad3ff;
+    background-color: rgb(255, 255, 255);
+}
+
+.projects a {
+    color: aliceblue;
+    text-decoration: none;
+    background-color: #c0361e;
+    padding: 8px 15px;
+    border-radius: 7px;
+    display: inline-block;
+    font-size: 17px;
+}
+
+.projects a:hover {
+    background-color: #c0361edc;
+}
+
+#code-link {
+    color: aliceblue;
+    text-decoration: none;
+    background-color: #146317b9;
+    padding: 8px 15px;
+    border-radius: 7px;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+#code-link:hover {
+    background-color: #146317a8;
+}
+
+.project-item {
+    overflow: hidden;
+    border-bottom: 1px dashed #566246ff;
+    border-bottom: 2px solid #566246ff;
+    padding: 25px 0;
+}
+
+.project-item p {
+    margin-top: 10px;
+}
+
+.project-item h3+p {
+    margin-bottom: 0px;
+}
+
+.project-item h3 {
+    margin-top: 20px;
+}
+
+
+/* Resume
+-----------------------------------------*/
+
+.end {
+    text-align: center;
+}
+
+.resume-content {
+    background-color: #a4c2a5ff;
+    background-color: #f6f9fc;
+    background-color: #daded4;
+    background-color: white;
+    border-top: 2px solid rgb(63, 119, 172);
+    border-bottom: 2px solid rgb(63, 119, 172);
+    font-family: 'Newsreader', serif;
+    font-size: 20px;
+}
+
+.resume-content p {
+    font-family: 'Newsreader', serif;
+    font-size: 20px;
+    text-align: center;
+    padding: 0px;
+}
+
+.resume-content>.content-wrap {
+    max-width: 1200px;
+    width: 85%;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.heading {
+    font-weight: 500;
+    font-size: x-large;
+    padding-top: 10px;
+    margin-bottom: 30px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.heading2 {
+    font-weight: 600;
+    color: brown;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.resume-content a {
+    border-top: 2px solid rgba(0, 0, 255, 0.705);
+    padding-top: 15px;
+}
+
+a#unique {
+    border-top: 1px solid black;
+    ;
+}
+
+a#bottomline {
+    border-bottom: 2px solid rgba(0, 0, 255, 0.705);
+    padding-bottom: 10px;
+    border-top: hidden;
+}
+
+hr.inheading {
+    border-top: 2px solid red;
+}
+
+.topgap {
+    margin-top: 30px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.column1 {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    text-align: center;
+    background-color: aliceblue;
+    background-color: #daded4;
+    background-color: white;
+    font-size: 19px;
+}
+
+.row1:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column1 p {
+    margin: 5px 0;
+}
+
+@media screen and (max-width: 1100px) {
+    .column1 {
+        width: 100%;
+        margin: 1px;
+    }
+    .column1 p {
+        margin: 5px 0;
+    }
+}
+
+.list {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.list2 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.info {
+    text-align: center;
+    display: block;
+}
+
+.info#fullname {
+    font-weight: 500;
+    font-size: 220%;
+    margin-bottom: 10px;
+}
+
+p.refe {
+    padding-top: 10px;
+    font-style: italic;
+}
+
+ul li {
+    padding: 4px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.flex-item-left {
+    padding: 10px;
+    flex: 33.3%;
+    text-align: right;
+}
+
+.flex-item-middle {
+    padding: 10px;
+    flex: 33.3%;
+}
+
+.flex-item-right {
+    padding: 10px;
+    flex: 33.3%;
+    text-align: left;
+}
+
+.end {
+    margin-top: 15px;
+}
+
+@media screen and (max-width: 1100px) {
+    .flex-container {
+        display: block;
+    }
+    .flex-item-right,
+    .flex-item-middle,
+    .flex-item-left {
+        padding: 5px;
+        flex: 100%;
+        text-align: center;
+    }
+}
+
+
+/* Contact Me
+-----------------------------------------*/
+
+footer {
+    color: aliceblue;
+}
+
+.contactMe a {
+    color: aliceblue;
+}
+
+.contactMe h2 {
+    padding-top: 10px;
+}
+
+.contact-list {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 0px;
+    font-family: 'Abril Fatface', cursive, serif;
+}
+
+.contact-list a {
+    padding: 5px 15px;
+    display: inline-block;
+    font-weight: normal;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.contact-list a:hover {
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.contact-list a:first-of-type {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.bottom-tab {
+    margin: 30px;
+}
+
+
+/* Responsive
+-----------------------------------------*/
+
+@media screen and (min-width:750px) {
+    header,
+    footer {
+        text-align: center;
+    }
+    .project-item img {
+        float: left;
+        margin-right: 20px;
+    }
+    .project-item h3 {
+        margin-top: 0px;
+    }
+    .contact-list {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:749px) {
+    .contactMe h2 {
+        line-height: 1;
+        padding: 15px;
+    }
+    .contact-list a {
+        padding-left: 15px;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    img {
+        width: 300px;
+        height: 200px;
+        padding: 7px;
+        border: 1px solid rgb(63, 119, 172);
+        border-radius: 10px;
+    }
+    #heading1Name {
+        font-size: 15vw;
+        color: rgb(29, 73, 155);
+        padding-top: 0;
+    }
+    #heading2Name {
+        font-size: 14vw;
+        color: rgb(29, 73, 155);
+        text-align: center;
+    }
+    #heading3Name {
+        font-size: 14vw;
+        color: rgb(245, 3, 3);
+        text-align: center;
+    }
+    #heading4Name {
+        font-size: 3.9vw;
+        padding-top: 0.8vw;
+    }
+    .textonscreen {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        padding: 4vw 12vw 8vw 12vw;
+    }
+    .leftonscreen {
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        padding: 20px 40px;
+        writing-mode: horizontal-tb;
+    }
+    .rightonscreen {
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        padding: 20px 40px;
+        writing-mode: horizontal-tb;
+    }
+    a.sidebars {
+        font-size: 8vw;
+        color: rgb(63, 119, 172);
+        text-align: center;
+    }
+    a.sidebars:hover {
+        font-size: 9vw;
+    }
 }
