--- a/portfolio.css
+++ b/portfolio.css
@@ -7,7 +7,7 @@ html {
 
 body {
     background-color: #fff;
-    /* background-image: linear-gradient(to right, rgb(63, 119, 172), #c0361e5d); */
+    background-image: linear-gradient(to right, rgb(63, 119, 172), #c0361e5d);
     font-family: 'Abril Fatface', cursive, serif;
     margin: 0;
 }
@@ -16,52 +16,141 @@ body {
     width: 100%;
     height: 100%;
     height: 100vh;
-    background: #000 url(bg.png) no-repeat fixed center center / cover;
 }
 
 
-#heading2Name {
-    font-size: 7.5vw;
-    color: aliceblue;
+/* ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+}
+
+li {
+    float: right;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 12px 16px 12px 16px;
+    text-decoration: none;
+    font-size: 21px;
+    font-family: 'Newsreader', serif;
+}
+
+li a:hover {
+    border-bottom: 3px solid rgb(245, 3, 3);
+}
+
+.selected {
+    background-color: rgb(250, 199, 192);
+} */
+
+#heading1Name {
+    font-size: 8vw;
     color: rgb(29, 73, 155);
     text-align: center;
-    /* background: -webkit-linear-gradient(rgb(163, 169, 201), rgb(245, 3, 3));
+    background: -webkit-linear-gradient(rgb(163, 169, 201), rgb(245, 3, 3));
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
+    -webkit-text-fill-color: transparent;
+    margin-top: 0;
+}
+
+#heading2Name {
+    font-size: 7.5vw;
+    color: rgb(29, 73, 155);
+    text-align: center;
+    background: -webkit-linear-gradient(rgb(163, 169, 201), rgb(245, 3, 3));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #heading3Name {
     font-size: 7.5vw;
-    /* color: rgb(245, 3, 3);
-    color: rgb(63, 119, 172); */
+    color: rgb(245, 3, 3);
     text-align: center;
-    color: aliceblue;
+    background: -webkit-linear-gradient( rgb(63, 119, 172), #c0361e5d);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #heading4Name {
     font-size: 2.05vw;
     padding-top: 0.8vw;
     font-size: 2.8vw;
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     text-align: center;
-    color: aliceblue;
-    color: rgb(29, 73, 155);
 }
 
 .textonscreen {
     position: absolute;
     top: 50%;
-    left: 65%;
-    transform: translate(-30%, -50%);
-    /* background-color: #fff; */
-    /* padding: 4vw 6vw 6vw 6vw; */
-    /* box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 4vw 6vw 6vw 6vw;
+    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.849);
     box-shadow: 0 8px 16px 0 rgb(151, 66, 66);
-    background-image: linear-gradient(to right, #fff, #f0f6fc); */
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
 }
 
 
 /* Sidebars and Links
 -----------------------------------------*/
+
+.leftonscreen {
+    position: absolute;
+    top: 50%;
+    left: 12%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 8vw 6vw 8vw 6vw;
+    box-shadow: 0 8px 16px 0 rgba(19, 83, 180, 0.521);
+    writing-mode: vertical-lr;
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
+}
+
+.rightonscreen {
+    position: absolute;
+    top: 50%;
+    left: 88%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 8vw 6vw 8vw 6vw;
+    box-shadow: 0 8px 16px 0 rgba(160, 10, 10, 0.521);
+    writing-mode: vertical-lr;
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+    background-image: linear-gradient(to right, #fff, #f0f6fc);
+}
+
+a.sidebars:link {
+    text-decoration: none;
+}
+
+a.sidebars {
+    font-size: 3vw;
+    color: rgb(63, 119, 172);
+    text-align: center;
+}
+
+a.sidebars:hover {
+    font-size: 4vw;
+}
+
 .sociallinks {
     text-align: center;
     margin-top: 1.5vw;
@@ -160,10 +249,8 @@ p {
 .lang-used {
     color: aliceblue;
     text-decoration: none;
-    background-color: #62b6ff;
     background-color: rgb(61, 115, 216);
     background-color: rgb(63, 119, 172);
-    background-color: rgb(29, 73, 155);
     padding: 4px 9px;
     border-radius: 4px;
     display: inline-block;
@@ -176,7 +263,6 @@ p {
     color: aliceblue;
     text-decoration: none;
     color: rgb(63, 119, 172);
-    color: rgb(29, 73, 155);
     border-radius: 4px;
     padding: 2px;
     display: inline-block;
@@ -213,14 +299,13 @@ p {
 }
 
 .projects a:hover {
-    background-color: #c0361ecc;
+    background-color: #c0361edc;
 }
 
 #code-link {
     color: aliceblue;
     text-decoration: none;
     background-color: #146317b9;
-    background-color:  rgb(29, 73, 155);
     padding: 8px 15px;
     border-radius: 7px;
     display: inline-block;
@@ -228,7 +313,7 @@ p {
 }
 
 #code-link:hover {
-    background-color:  rgba(29, 73, 155, 0.801);
+    background-color: #146317a8;
 }
 
 .project-item {
@@ -251,16 +336,166 @@ p {
 }
 
 
+/* Resume
+-----------------------------------------*/
+
+.end {
+    text-align: center;
+}
+
+.resume-content {
+    background-color: #a4c2a5ff;
+    background-color: #f6f9fc;
+    background-color: #daded4;
+    background-color: white;
+    border-top: 2px solid rgb(63, 119, 172);
+    /* border-bottom: 2px solid rgb(63, 119, 172); */
+    font-family: 'Newsreader', serif;
+    font-size: 20px;
+}
+
+.resume-content p {
+    font-family: 'Newsreader', serif;
+    font-size: 20px;
+    text-align: center;
+    padding: 0px;
+}
+
+.resume-content>.content-wrap {
+    max-width: 1200px;
+    width: 85%;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.heading {
+    font-weight: 500;
+    font-size: x-large;
+    padding-top: 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.heading2 {
+    font-weight: 600;
+    color: brown;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.resume-content a {
+    border-top: 2px solid rgba(0, 0, 255, 0.705);
+    padding-top: 15px;
+}
+
+a#unique {
+    border-top: 1px solid black;
+    ;
+}
+
+a#bottomline {
+    border-bottom: 2px solid rgba(0, 0, 255, 0.705);
+    padding-bottom: 10px;
+    border-top: hidden;
+}
+
+hr.inheading {
+    border-top: 2px solid red;
+}
+
+.topgap {
+    margin-top: 30px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.column1 {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    text-align: center;
+    background-color: aliceblue;
+    background-color: #daded4;
+    background-color: white;
+    font-size: 19px;
+}
+
+.row1:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column1 p {
+    margin: 5px 0;
+}
+
+.list {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.list2 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.info {
+    text-align: center;
+    display: block;
+}
+
+.info#fullname {
+    font-weight: 500;
+    font-size: 220%;
+    margin-bottom: 10px;
+}
+
+p.refe {
+    padding-top: 10px;
+    font-style: italic;
+}
+
+ul li {
+    padding: 4px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.flex-item-left {
+    padding: 10px;
+    flex: 33.3%;
+    text-align: right;
+}
+
+.flex-item-middle {
+    padding: 10px;
+    flex: 33.3%;
+}
+
+.flex-item-right {
+    padding: 10px;
+    flex: 33.3%;
+    text-align: left;
+}
+
+.end {
+    margin-top: 15px;
+}
+
+
 /* Contact Me
 -----------------------------------------*/
 
-.footer-box, .bottom-tab{
-    background-color: #62b6ff;
-}
-
 footer {
     color: aliceblue;
-    
 }
 
 .contactMe a {
@@ -276,7 +511,6 @@ footer {
     padding: 0;
     margin-top: 0px;
     font-family: 'Abril Fatface', cursive, serif;
-    
 }
 
 .contact-list a {
@@ -289,8 +523,9 @@ footer {
 }
 
 .contact-list a:hover {
-    color: #62b6ff;
-    color: rgb(29, 73, 155);
+    background: -webkit-linear-gradient(rgb(190, 87, 87), rgb(2, 13, 34));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .contact-list a:first-of-type {
@@ -299,7 +534,7 @@ footer {
 }
 
 .bottom-tab {
-    background-color: #62b6ff;
+    margin: 25px;
 }
 
 #triangle {
@@ -311,342 +546,6 @@ footer {
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
     border-top: 30px solid white;
-}
-
-
-ul {
-    margin-block-end: 0em;
-}
-
-
-/* Navbar section */
-
-.nav {
-    width: 100%;
-    height: 65px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
-    z-index: 2;
-}
-
-.nav div.logo {
-    float: left;
-    width: auto;
-    height: auto;
-    padding-left: 3rem;
-}
-
-.nav div.logo a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 2.5rem;
-}
-
-.nav div.logo a:hover {
-    color: rgb(29, 73, 155);
-}
-
-.nav div.main_list {
-    height: 65px;
-    float: right;
-}
-
-.nav div.main_list ul {
-    width: 100%;
-    height: 65px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav div.main_list ul li {
-    width: auto;
-    height: 65px;
-    padding: 0;
-    padding-right: 3rem;
-}
-
-.nav div.main_list ul li a {
-    text-decoration: none;
-    color: #fff;
-    line-height: 65px;
-    font-size: 2.4rem;
-}
-
-.nav div.main_list ul li a:hover {
-    /* color: #00E676; */
-    color: rgb(29, 73, 155);
-    backdrop-filter: blur(1px); 
-}
-
-
-/* Home section */
-
-
-.navTrigger {
-    display: none;
-}
-
-.nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-
-
-/* Media qurey section */
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .container {
-        margin: 0;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .navTrigger {
-        display: block;
-    }
-    .nav div.logo {
-        margin-left: 15px;
-    }
-    .nav div.main_list {
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-    }
-    .nav div.show_list {
-        height: auto;
-        display: none;
-    }
-    .nav div.main_list ul {
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        
-        background-color: rgba(0, 0, 0, 1);
-        background-color:  rgb(29, 73, 155); 
-        background-color: #62b6ff;
-        /*same background color of navbar*/
-        background-position: center top;
-    }
-    .nav div.main_list ul li {
-        width: 100%;
-        text-align: right;
-    }
-    .nav div.main_list ul li a {
-        text-align: center;
-        width: 100%;
-        font-size: 3rem;
-        padding: 20px;
-    }
-    .nav div.media_button {
-        display: block;
-    }
-}
-
-
-/* Animation */
-/* Inspiration taken from Dicson https://codemyui.com/simple-hamburger-menu-x-mark-animation/ */
-
-.navTrigger {
-    cursor: pointer;
-    width: 30px;
-    height: 25px;
-    margin: auto;
-    position: absolute;
-    right: 30px;
-    top: 0;
-    bottom: 0;
-}
-
-.navTrigger i {
-    background-color: #fff;
-    border-radius: 2px;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
-}
-
-.navTrigger i:nth-child(1) {
-    -webkit-animation: outT 0.8s backwards;
-    animation: outT 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger i:nth-child(2) {
-    margin: 5px 0;
-    -webkit-animation: outM 0.8s backwards;
-    animation: outM 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger i:nth-child(3) {
-    -webkit-animation: outBtm 0.8s backwards;
-    animation: outBtm 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger.active i:nth-child(1) {
-    -webkit-animation: inT 0.8s forwards;
-    animation: inT 0.8s forwards;
-}
-
-.navTrigger.active i:nth-child(2) {
-    -webkit-animation: inM 0.8s forwards;
-    animation: inM 0.8s forwards;
-}
-
-.navTrigger.active i:nth-child(3) {
-    -webkit-animation: inBtm 0.8s forwards;
-    animation: inBtm 0.8s forwards;
-}
-
-@-webkit-keyframes inM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
-}
-
-@keyframes inM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-@-webkit-keyframes outM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
-}
-
-@keyframes outM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-@-webkit-keyframes inT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@keyframes inT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@keyframes outT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes inBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes inBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes outBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-.affix {
-    padding: 0;
-    background-color: #62b6ff;
-    backdrop-filter: blur(1px); /* Fallback for supporting browsers */
 }
 
 
@@ -675,7 +574,7 @@ ul {
 @media screen and (max-width:749px) {
     .contactMe h2 {
         line-height: 1;
-        margin: 15px;
+        padding: 15px;
     }
     .contact-list a {
         padding-left: 15px;
@@ -705,25 +604,7 @@ ul {
     }
 }
 
-@media screen and (max-width:1200px) {
-
-    .onePage::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    backdrop-filter: blur(1px); 
-    }
-
-
-    .sociallinks{
-        padding-top: 1vh;
-    }
-
+@media screen and (max-width:900px) {
     img {
         width: 300px;
         height: 200px;
@@ -734,33 +615,29 @@ ul {
     #heading1Name {
         font-size: 15vw;
         color: rgb(29, 73, 155);
-        color: aliceblue;
         padding-top: 0;
     }
     #heading2Name {
         font-size: 14vw;
         color: rgb(29, 73, 155);
-        color: #62b6ff;
         text-align: center;
     }
     #heading3Name {
         font-size: 14vw;
-        /* color: rgb(245, 3, 3); */
-        color: aliceblue;
+        color: rgb(245, 3, 3);
         text-align: center;
     }
     #heading4Name {
-        font-size: 4.8vw;
+        font-size: 3.9vw;
         padding-top: 0.8vw;
-        color: #62b6ff;
     }
     .textonscreen {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        /* background-color: #fff; */
-        /* padding: 4vw 12vw 8vw 12vw; */
+        background-color: #fff;
+        padding: 4vw 12vw 8vw 12vw;
     }
     .leftonscreen {
         position: absolute;
@@ -784,26 +661,4 @@ ul {
     a.sidebars:hover {
         font-size: 9vw;
     }
-}
-
-
-@media screen and (max-width: 770px) {
-    #heading2Name {
-        font-size: 17vw;
-        color: rgb(29, 73, 155);
-        color: #62b6ff;
-        text-align: center;
-    }
-    #heading3Name {
-        font-size: 20vw;
-        /* color: rgb(245, 3, 3); */
-        color: aliceblue;
-        text-align: center;
-    }
-    #heading4Name {
-        font-size: 7vw;
-        padding-top: 0.8vw;
-        color: #62b6ff;
-    }
-
 }
