--- a/portfolio.css
+++ b/portfolio.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100%;
     height: 100vh;
-    background: #000 url(bg.png) no-repeat fixed center center / cover;
+    background: #62b6ff url(bg.png) no-repeat fixed center center / cover;
 }
 
 
@@ -465,6 +465,10 @@ ul {
     bottom: 0;
 }
 
+.nav.active-nav{
+    height: 110px;
+}
+
 .navTrigger i {
     background-color: #fff;
     border-radius: 2px;
@@ -475,40 +479,40 @@ ul {
 }
 
 .navTrigger i:nth-child(1) {
-    -webkit-animation: outT 0.8s backwards;
-    animation: outT 0.8s backwards;
+    -webkit-animation: outT 0.3s backwards;
+    animation: outT 0.3s backwards;
     -webkit-animation-direction: reverse;
     animation-direction: reverse;
 }
 
 .navTrigger i:nth-child(2) {
     margin: 5px 0;
-    -webkit-animation: outM 0.8s backwards;
-    animation: outM 0.8s backwards;
+    -webkit-animation: outM 0.3s backwards;
+    animation: outM 0.3s backwards;
     -webkit-animation-direction: reverse;
     animation-direction: reverse;
 }
 
 .navTrigger i:nth-child(3) {
-    -webkit-animation: outBtm 0.8s backwards;
-    animation: outBtm 0.8s backwards;
+    -webkit-animation: outBtm 0.3s backwards;
+    animation: outBtm 0.3s backwards;
     -webkit-animation-direction: reverse;
     animation-direction: reverse;
 }
 
 .navTrigger.active i:nth-child(1) {
-    -webkit-animation: inT 0.8s forwards;
-    animation: inT 0.8s forwards;
+    -webkit-animation: inT 0.3s forwards;
+    animation: inT 0.3s forwards;
 }
 
 .navTrigger.active i:nth-child(2) {
-    -webkit-animation: inM 0.8s forwards;
-    animation: inM 0.8s forwards;
+    -webkit-animation: inM 0.3s forwards;
+    animation: inM 0.3s forwards;
 }
 
 .navTrigger.active i:nth-child(3) {
-    -webkit-animation: inBtm 0.8s forwards;
-    animation: inBtm 0.8s forwards;
+    -webkit-animation: inBtm 0.3s forwards;
+    animation: inBtm 0.3s forwards;
 }
 
 @-webkit-keyframes inM {
@@ -706,6 +710,11 @@ ul {
 }
 
 @media screen and (max-width:1200px) {
+
+    .bottom-tab{
+        /* background-color: rgba(0, 0, 0, 0.5);  */
+        backdrop-filter: blur(1px); /* Fallback for supporting browsers */
+    }
 
     .onePage::before {
     content: "";
